fix #1, the user title is small on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 
 .button {
   flex: 0 1 49%;
+  font-size: 1.5rem;
 }
 
 .button:focus, .button:hover {
