--- a/src/components/InfoCard.css
+++ b/src/components/InfoCard.css
@@ -72,7 +72,7 @@
 .card-title-wrap {
   display: flex;
   justify-content: space-between;
-  font-size: .5rem;
+  font-size: 1rem;
 }
 
 .card-rewards-text {
